# run-merged-step

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
.github/workflows/: ci.yml
cmd/: BUILD.bazel  common.go  fs.go  prepare.go  prepare_test.go  report.go  report_test.go  root.go  run.go  run_test.go  status_manager.go  status_manager_test.go  test_mocks.go
cmd/fixtures/: simple.json
e2e/: BUILD.bazel  e2e_test.go  utils.go
e2e/fixtures/: .gitignore  pass_when_env_is_set.sh  upload_auto_revert_signal.sh
services/: BUILD.bazel  buildkite.go  exec.go  fs.go  logging.go
