load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = [
        "prepare.go",
        "status_manager.go",
        "root.go",
        "run.go",
    ],
    importpath = "github.com/fa93hws/run-merged-step/cmd",
    visibility = [
        "//:__pkg__",
        "//e2e:__pkg__",
    ],
    deps = [
        "//services:services_lib",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "prepare_test.go",
        "run_test.go",
        "status_manager_test.go",
        "test_mocks.go",
    ],
    data = glob(["fixtures/**/*.json"]),
    embed = [":cmd_lib"],
    deps = [
        "//services:services_lib",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
    tags = ["unit"]
)
